include doctype, lang, and more trap page updates

--- a/html/dungeon/shuten_trail_mid.html
+++ b/html/dungeon/shuten_trail_mid.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Shuten Trail Mid - Shiren 2 Wiki</title>
     <link rel="icon" href="/shiren2/favicon.ico">
