--- a/html/system/trap.html
+++ b/html/system/trap.html
@@ -94,56 +94,56 @@
             <td><img src="/shiren2/image/trap/trap_trip_stone.png" alt="Trap"></td>
             <td>Trip Stone</td>
             <td>2~4</td>
-            <td></td>
+            <td>Deals 2~4 damage, and makes you drop items in front of you.<br>Equipped items will never be dropped when tripped.<br>Carrying a Balance Staff will prevent tripping.<br>Hoarding Statues will prevent dropping items when tripped.<br><br>Monster: Deals 2~4 damage, and makes the monster drop 1 item.<br>(Only one item can be obtained per monster)</td>
             <td>10%</td>
           </tr>
           <tr>
             <td><img src="/shiren2/image/trap/trap_landmine.png" alt="Trap"></td>
             <td>Landmine</td>
             <td>50%</td>
-            <td></td>
+            <td>Deals damage equal to 50% of Shiren's current HP.<br>Shiren will collapse if he steps on it with 1 HP remaining.<br>Destroys items, monsters, and walls in a 1-tile radius.<br>Nearby explosions (excluding Cannonballs) will also trigger it.</td>
             <td>8%</td>
           </tr>
           <tr>
             <td><img src="/shiren2/image/trap/trap_big_landmine.png" alt="Trap"></td>
             <td>Big Landmine</td>
             <td>75%</td>
-            <td></td>
+            <td>Deals damage equal to 75% of Shiren's current HP.<br>Shiren will collapse if he steps on it with 1 HP remaining.<br>Destroys items, monsters, and walls in a 1-tile radius.<br>Nearby explosions (excluding Cannonballs) will also trigger it.</td>
             <td>8%</td>
           </tr>
           <tr>
             <td><img src="/shiren2/image/trap/trap_flood.png" alt="Trap"></td>
             <td>Flood Trap</td>
             <td>75%</td>
-            <td></td>
+            <td>Deals 75% damage to all characters and monsters on the current floor.<br>No effect on frozen monsters, and sleeping monsters will wake up.<br>Mixes up the location of items, characters, and statues.<br>Turns riceballs into Spoiled Riceballs, and scrolls into Wet Scrolls.<br>Riceballs and scrolls inside pots will not be affected by the flood.<br>If a shop was present, the entire floor will be treated as a shop,<br>and Shopkeepers will wander in search for the stairs.<br>Patient Bags will be sealed as a result of the flood.<br>Floods cannot occur in Shuffle Dungeon maps.</td>
             <td>100%</td>
           </tr>
           <tr>
             <td><img src="/shiren2/image/trap/trap_rust.png" alt="Trap"></td>
             <td>Rust Trap</td>
             <td>-</td>
-            <td></td>
+            <td>Decreases equipped weapon and shield upgrade values by 1.<br>No effect on plated (金 seal) or innately rustproof equipment.<br>If triggered by a thrown weapon or shield,<br>the item's upgrade value will be decreased by 1.<br><br>Monster: Lowers defense to 0.<br>Slows Boy Cart, Pop Tank, and Cranky Tank.</td>
             <td>13%</td>
           </tr>
           <tr>
             <td><img src="/shiren2/image/trap/trap_summon.png" alt="Trap"></td>
             <td>Summon Trap</td>
             <td>-</td>
-            <td></td>
+            <td>Summons 4 identical monsters, selected from the floor's monster table.<br>Summons less than 4 if there isn't enough room, but can summon inside<br>water or walls if the selected monster has Water or Wall-clip elements.<br>Monsters act immediately after being summoned when<br>the trap is triggered using the [Ground] menu option,<br>by a thrown item, or when stepped on while slowed.</td>
             <td>100%</td>
           </tr>
           <tr>
             <td><img src="/shiren2/image/trap/trap_spin.png" alt="Trap"></td>
             <td>Spin Trap</td>
             <td>-</td>
-            <td></td>
+            <td>Confuses the character that stepped on it for 10 turns.<br><br>Monster: Confuses the monster that stepped on it for 20 turns.</td>
             <td>15%</td>
           </tr>
           <tr>
             <td><img src="/shiren2/image/trap/trap_strip.png" alt="Trap"></td>
             <td>Strip Trap</td>
             <td>-</td>
-            <td></td>
+            <td>Unequips all equipped items. (Weapon, Shield, Bracelets, Projectile)<br>Cannot free your hand from a Sticky Pot.<br><br>Monster: Permanently seals the monster.</td>
             <td>13%</td>
           </tr>
           <tr>
