--- a/html/dungeon/hidden_hole.html
+++ b/html/dungeon/hidden_hole.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Shrine's Hidden Hole - Shiren 2 Wiki</title>
     <link rel="icon" href="/shiren2/favicon.ico">
