--- a/html/dungeon/small_valley.html
+++ b/html/dungeon/small_valley.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Small Valley - Shiren 2 Wiki</title>
     <link rel="icon" href="/shiren2/favicon.ico">
