--- a/html/item/staff.html
+++ b/html/item/staff.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Staves - Shiren 2 Wiki</title>
     <link rel="icon" href="/shiren2/favicon.ico">
