finished trap descriptions

--- a/html/system/trap.html
+++ b/html/system/trap.html
@@ -150,56 +150,56 @@
             <td><img src="/shiren2/image/trap/trap_spoil.png" alt="Trap"></td>
             <td>Spoil Trap</td>
             <td>-</td>
-            <td></td>
+            <td>Turns all riceballs that aren't inside pots into Spoiled Riceballs.<br>If the trap is triggered by throwing a riceball,<br>the thrown riceball will be turned into a Spoiled Riceball.<br><br>Monster: Turns the monster into a Spoiled Riceball, defeating it.<br>(Monsters defeated by a Spoil Trap won't drop items)</td>
             <td>8%</td>
           </tr>
           <tr>
             <td><img src="/shiren2/image/trap/trap_bear.png" alt="Trap"></td>
             <td>Bear Trap</td>
             <td>-</td>
-            <td></td>
+            <td>Prevents movement for 3~7 turns.<br>Characters caught in a Bear Trap cannot evade attacks.</td>
             <td>6%</td>
           </tr>
           <tr>
             <td><img src="/shiren2/image/trap/trap_slow.png" alt="Trap"></td>
             <td>Slow Trap</td>
             <td>-</td>
-            <td></td>
+            <td>Slows movement speed for 10 turns.<br><br>Monster: Permanently slows movement speed.<br>(Sealing a monster cancels the effect)</td>
             <td>10%</td>
           </tr>
           <tr>
             <td><img src="/shiren2/image/trap/trap_sleep.png" alt="Trap"></td>
             <td>Sleep Trap</td>
             <td>-</td>
-            <td></td>
+            <td>Puts a character to sleep for 5 turns.<br>Sleeping characters cannot evade attacks.</td>
             <td>15%</td>
           </tr>
           <tr>
             <td><img src="/shiren2/image/trap/trap_spring.png" alt="Trap"></td>
             <td>Spring</td>
             <td>-</td>
-            <td></td>
+            <td>Warps the character or item that triggered it<br>to a random location on the current floor.</td>
             <td>10%</td>
           </tr>
           <tr>
             <td><img src="/shiren2/image/trap/trap_monster.png" alt="Trap"></td>
             <td>Monster Trap</td>
             <td>-</td>
-            <td></td>
+            <td>Transforms items inside the room into monsters.<br>Merchandise inside shops will also transform into monsters.<br>No effect on items beneath characters or scrolls stuck to the ground.<br>If triggered by a thrown item, only the thrown item<br>will be transformed into a monster.</td>
             <td>-</td>
           </tr>
           <tr>
             <td><img src="/shiren2/image/trap/trap_chain.png" alt="Trap"></td>
             <td>Chain Trap</td>
             <td>-</td>
-            <td></td>
+            <td>Only appears inside Halfway Well.<br>Triggers other traps in a 1-tile radius, beginning from the top<br>and moving in a clockwise direction.</td>
             <td>7%</td>
           </tr>
           <tr>
             <td><img src="/shiren2/image/trap/trap_one_way.png" alt="Trap"></td>
             <td>One-Way Trap</td>
             <td>-</td>
-            <td></td>
+            <td>Only appears inside Halfway Well.<br>Foces the character that stepped on it to<br>move forward in the direction the arrow is pointing.<br>The direction of the arrow is based on the direction Shiren is facing<br>when the trap is placed, but it cannot point in diagonal directions.</td>
             <td>15%</td>
           </tr>
         </table>
