--- a/html/system/trap.html
+++ b/html/system/trap.html
@@ -18,7 +18,14 @@
       <div id="sidebar" class="box sidebar"></div>
       <div id="content" class="box content">
         <h2 class="page_heading">Traps</h2>
-        <p>Text</p>
+        <div id="trap_explanation">
+          <p>Traps are found on the ground, and activate when stepped on, or if an object is thrown or dropped on top of them.</p>
+          <p>Allies who are thrown onto traps receive the same effect as Shiren stepping on them,<br>but ally monsters receive the effect of a monster stepping on them.<br>For example, if Asuka is thrown onto a Landmine, she will receive damage equal to 50% of her current HP,<br>but if an ally Mamel is thrown onto a Landmine, it will be instantly defeated, no matter its current HP.</p>
+          <p>The "Break" column shows the chance of a trap breaking when Shiren has the trapper status<br>from either being inside the Halfway Well dungeon, or when he has a Trapper Bracelet equipped.</p>
+          <p>Traps can be destroyed by splashing water on them from a Water Pot.<br>However, traps cannot be destroyed by explosions or the effect of a Flood Trap.<br>Traps thrown into water will vanish with the message "[Trap name] disappeared..."<br>Piko Hammer family monsters can destroy visible traps, and swinging a Knockback Staff<br>at a trap so that it hits a monster will deal a small amount of damage and make the trap vanish.</p>
+          <p>Hidden traps cannot be detected by the [Ground] menu option,<br>but can still be destroyed by splashing water on them from a Water Pot.<br>Swinging a Mallet over a tile with a hidden trap will reveal the trap without destroying it,<br>and swinging the Mallet again over the visible trap will destroy the trap.<br>Hidden traps can be destroyed on the same turn using a Mallet if Shiren is under the effect of Sight Grass.</p>
+          <p>Damage dealt by traps increases as Shiren levels up when he has the Trapper status<br>from either being inside the Halfway Well dungeon, or by having a Trapper Bracelet equipped. (<a href="">Trap Damage</a>)<br>The "Dmg" column shows the amount of damage the trap deals when Shiren doesn't have the Trapper status.<br>Shiren's level is not a factor for the amount of damage a trap deals when Shiren doesn't have the Trapper status.</p>
+        </div>
         <table>
           <tr>
             <th>Image</th>
@@ -203,6 +210,15 @@
             <td>15%</td>
           </tr>
         </table>
+        <h2 class="page_heading">Trap Damage</h2>
+        <p>[Table]</p>
+        <h2 class="page_heading">Experience Points</h2>
+        <p>Text</p>
+        <h3>Chain Trap Experience Points</h3>
+        <p>Text</p>
+        <h3>Multiplier Table</h3>
+        <p>Text</p>
+        <p>[Table]</p>
       </div>
       <div id="footer" class="box footer"></div>
     </div>
