--- a/html/system/trap.html
+++ b/html/system/trap.html
@@ -2309,12 +2309,428 @@
           </tr>
         </table>
         <h2 class="page_heading">Experience Points</h2>
-        <p>Text</p>
+        <p>Shiren with the Trapper status gains experience points equal to 95% of the normal amount when he defeats<br>an enemy using a trap, or 75% of the normal amount if the trap doesn't defeat the enemy.<br>However, enemies defeated by a Spoil Trap will be the same amount as not defeating an enemy using other traps.<br>Lastly, Shiren only gains 20% of the normal amount if he defeats enemies using regular attacks.</p>
         <h3>Chain Trap Experience Points</h3>
-        <p>Text</p>
+        <p>Chain Traps activate all other traps in a 1-tile radius, potentially granting a large amount of experience points.<br>The chain can also be continued by placing traps at the end points of One-Way and Log traps,<br>or by placing Landmines in close proximity so that they explode one after the other.<br>The formula used in calculating experience points in a trap chain is shown below.</p>
+        <p>
+          n = Number of traps that successfully trapped an enemy prior to the Chain Trap activating.<br>
+          m = Numer of Chain Traps that triggered due to a trap that moves an enemy (max: 1),<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;or the number of Landmines that exploded away from a Chain Trap.<br>
+          N = Number of traps that successfully trapped an enemy due to a Chain Trap activating.<br>
+          M = Number of traps activated by the Chain Trap that didn't trap an enemy.<br>
+          L = Number of Landmines that exploded within a 1-tile radius of a Chain Trap.<br>
+          (L isn't included in M, and the number of Chain Traps isn't counted for n or N)
+        </p>
+        <pre class="formula">
+
+  Exp = Normal amount * (3/4) * {n^2 + n * m * (2 * N + 1) + (1/2) * N * (N + 3) + M * (n + 1) + L * (n + N / 2)}
+  However, a Chain Trap on its own: Exp = Normal amount * (3 / 4)
+        </pre>
+        <p>If the trap defeated an enemy, the following is added to the amount of experience points:</p>
+        <pre class="formula">
+
+  Normal amount * (1 / 5) * (n + N)
+        </pre>
         <h3>Multiplier Table</h3>
-        <p>Text</p>
-        <p>[Table]</p>
+        <p>The following table shows the experience multiplier for a chain where the enemy is not defeated by a trap,<br>and when there aren't any traps that fail to trap an enemy in the chain, including explosion chains.</p>
+        <p>
+          n = Number of traps that successfully trapped an enemy prior to the Chain Trap activating.<br>
+          N = Number of traps that successfully trapped an enemy due to a Chain Trap activating.<br>
+          m = Number of Chain Traps (max: 1)
+        </p>
+        <table id="trap_experience_table">
+          <tr>
+            <th>N(m)\n</th>
+            <th>0</th>
+            <th>1</th>
+            <th>2</th>
+            <th>3</th>
+            <th>4</th>
+            <th>5</th>
+            <th>6</th>
+            <th>7</th>
+            <th>8</th>
+            <th>9</th>
+            <th>10</th>
+          </tr>
+          <tr>
+            <td>0 (0)</td>
+            <td>0.00</td>
+            <td>0.75</td>
+            <td>3.00</td>
+            <td>6.75</td>
+            <td>12.00</td>
+            <td>18.75</td>
+            <td>27.00</td>
+            <td>36.75</td>
+            <td>48.00</td>
+            <td>60.75</td>
+            <td>75.00</td>
+          </tr>
+          <tr>
+            <td>0 (1)</td>
+            <td>0.75</td>
+            <td>1.50</td>
+            <td>4.50</td>
+            <td>9.00</td>
+            <td>15.00</td>
+            <td>22.50</td>
+            <td>31.50</td>
+            <td>42.00</td>
+            <td>54.00</td>
+            <td>67.50</td>
+            <td>82.50</td>
+          </tr>
+          <tr>
+            <td>1 (1)</td>
+            <td>1.50</td>
+            <td>4.50</td>
+            <td>9.00</td>
+            <td>15.00</td>
+            <td>22.50</td>
+            <td>31.50</td>
+            <td>42.00</td>
+            <td>54.00</td>
+            <td>67.50</td>
+            <td>82.50</td>
+            <td>99.00</td>
+          </tr>
+          <tr>
+            <td>2 (1)</td>
+            <td>3.75</td>
+            <td>8.25</td>
+            <td>14.25</td>
+            <td>21.75</td>
+            <td>30.75</td>
+            <td>41.25</td>
+            <td>53.25</td>
+            <td>66.75</td>
+            <td>81.75</td>
+            <td>98.25</td>
+            <td>116.25</td>
+          </tr>
+          <tr>
+            <td>3 (1)</td>
+            <td>6.75</td>
+            <td>12.75</td>
+            <td>20.25</td>
+            <td>29.25</td>
+            <td>39.75</td>
+            <td>51.75</td>
+            <td>65.25</td>
+            <td>80.25</td>
+            <td>96.75</td>
+            <td>114.75</td>
+            <td>134.25</td>
+          </tr>
+          <tr>
+            <td>4 (1)</td>
+            <td>10.50</td>
+            <td>18.00</td>
+            <td>27.00</td>
+            <td>37.50</td>
+            <td>49.50</td>
+            <td>63.00</td>
+            <td>78.00</td>
+            <td>94.50</td>
+            <td>112.50</td>
+            <td>132.00</td>
+            <td>153.00</td>
+          </tr>
+          <tr>
+            <td>5 (1)</td>
+            <td>15.00</td>
+            <td>24.00</td>
+            <td>34.50</td>
+            <td>46.50</td>
+            <td>60.00</td>
+            <td>75.00</td>
+            <td>91.50</td>
+            <td>109.50</td>
+            <td>129.00</td>
+            <td>150.00</td>
+            <td>172.50</td>
+          </tr>
+          <tr>
+            <td>6 (1)</td>
+            <td>20.25</td>
+            <td>30.75</td>
+            <td>42.75</td>
+            <td>56.25</td>
+            <td>71.25</td>
+            <td>87.75</td>
+            <td>105.75</td>
+            <td>125.25</td>
+            <td>146.25</td>
+            <td>168.75</td>
+            <td>192.75</td>
+          </tr>
+          <tr>
+            <td>7 (1)</td>
+            <td>26.25</td>
+            <td>38.25</td>
+            <td>51.75</td>
+            <td>66.75</td>
+            <td>83.25</td>
+            <td>101.25</td>
+            <td>120.75</td>
+            <td>141.75</td>
+            <td>164.25</td>
+            <td>188.25</td>
+            <td>213.75</td>
+          </tr>
+          <tr>
+            <td>8 (1)</td>
+            <td>33.00</td>
+            <td>46.50</td>
+            <td>61.50</td>
+            <td>78.00</td>
+            <td>96.00</td>
+            <td>115.50</td>
+            <td>136.50</td>
+            <td>159.00</td>
+            <td>183.00</td>
+            <td>208.50</td>
+            <td>235.50</td>
+          </tr>
+          <tr>
+            <td>9 (1)</td>
+            <td>40.50</td>
+            <td>55.50</td>
+            <td>72.00</td>
+            <td>90.00</td>
+            <td>109.50</td>
+            <td>130.50</td>
+            <td>153.00</td>
+            <td>177.00</td>
+            <td>202.50</td>
+            <td>229.50</td>
+            <td>258.00</td>
+          </tr>
+          <tr>
+            <td>10 (1)</td>
+            <td>48.75</td>
+            <td>65.25</td>
+            <td>83.25</td>
+            <td>102.75</td>
+            <td>123.75</td>
+            <td>146.25</td>
+            <td>170.25</td>
+            <td>195.75</td>
+            <td>222.75</td>
+            <td>251.25</td>
+            <td>281.25</td>
+          </tr>
+          <tr>
+            <td>11 (1)</td>
+            <td>57.75</td>
+            <td>75.75</td>
+            <td>95.25</td>
+            <td>116.25</td>
+            <td>138.75</td>
+            <td>162.75</td>
+            <td>188.25</td>
+            <td>215.25</td>
+            <td>243.75</td>
+            <td>273.75</td>
+            <td>305.25</td>
+          </tr>
+          <tr>
+            <td>12 (1)</td>
+            <td>67.50</td>
+            <td>87.00</td>
+            <td>108.00</td>
+            <td>130.50</td>
+            <td>154.50</td>
+            <td>180.00</td>
+            <td>207.00</td>
+            <td>235.50</td>
+            <td>265.50</td>
+            <td>297.00</td>
+            <td>330.00</td>
+          </tr>
+          <tr>
+            <td>13 (1)</td>
+            <td>78.00</td>
+            <td>99.00</td>
+            <td>121.50</td>
+            <td>145.50</td>
+            <td>171.00</td>
+            <td>198.00</td>
+            <td>226.50</td>
+            <td>256.50</td>
+            <td>288.00</td>
+            <td>321.00</td>
+            <td>355.50</td>
+          </tr>
+          <tr>
+            <td>14 (1)</td>
+            <td>89.25</td>
+            <td>111.75</td>
+            <td>135.75</td>
+            <td>161.25</td>
+            <td>188.25</td>
+            <td>216.75</td>
+            <td>246.75</td>
+            <td>278.25</td>
+            <td>311.25</td>
+            <td>345.75</td>
+            <td>381.75</td>
+          </tr>
+          <tr>
+            <td>15 (1)</td>
+            <td>101.25</td>
+            <td>125.25</td>
+            <td>150.75</td>
+            <td>177.75</td>
+            <td>206.25</td>
+            <td>236.25</td>
+            <td>267.75</td>
+            <td>300.75</td>
+            <td>335.25</td>
+            <td>371.25</td>
+            <td>408.75</td>
+          </tr>
+          <tr>
+            <td>16 (1)</td>
+            <td>114.00</td>
+            <td>139.50</td>
+            <td>166.50</td>
+            <td>195.00</td>
+            <td>225.00</td>
+            <td>256.50</td>
+            <td>289.50</td>
+            <td>324.00</td>
+            <td>360.00</td>
+            <td>397.50</td>
+            <td>436.50</td>
+          </tr>
+          <tr>
+            <td>17 (1)</td>
+            <td>127.50</td>
+            <td>154.50</td>
+            <td>183.00</td>
+            <td>213.00</td>
+            <td>244.50</td>
+            <td>277.50</td>
+            <td>312.00</td>
+            <td>348.00</td>
+            <td>385.50</td>
+            <td>424.50</td>
+            <td>465.00</td>
+          </tr>
+          <tr>
+            <td>18 (1)</td>
+            <td>141.75</td>
+            <td>170.25</td>
+            <td>200.25</td>
+            <td>231.75</td>
+            <td>264.75</td>
+            <td>299.25</td>
+            <td>335.25</td>
+            <td>372.75</td>
+            <td>411.75</td>
+            <td>452.25</td>
+            <td>494.25</td>
+          </tr>
+          <tr>
+            <td>19 (1)</td>
+            <td>156.75</td>
+            <td>186.75</td>
+            <td>218.25</td>
+            <td>251.25</td>
+            <td>285.75</td>
+            <td>321.75</td>
+            <td>359.25</td>
+            <td>398.25</td>
+            <td>438.75</td>
+            <td>480.75</td>
+            <td>524.25</td>
+          </tr>
+          <tr>
+            <td>20 (1)</td>
+            <td>172.50</td>
+            <td>204.00</td>
+            <td>237.00</td>
+            <td>271.50</td>
+            <td>307.50</td>
+            <td>345.00</td>
+            <td>384.00</td>
+            <td>424.50</td>
+            <td>466.50</td>
+            <td>510.00</td>
+            <td>555.00</td>
+          </tr>
+          <tr>
+            <td>21 (1)</td>
+            <td>189.00</td>
+            <td>222.00</td>
+            <td>256.50</td>
+            <td>292.50</td>
+            <td>330.00</td>
+            <td>369.00</td>
+            <td>409.50</td>
+            <td>451.50</td>
+            <td>495.00</td>
+            <td>540.00</td>
+            <td>586.50</td>
+          </tr>
+          <tr>
+            <td>22 (1)</td>
+            <td>206.25</td>
+            <td>240.75</td>
+            <td>276.75</td>
+            <td>314.25</td>
+            <td>353.25</td>
+            <td>393.75</td>
+            <td>435.75</td>
+            <td>479.25</td>
+            <td>524.25</td>
+            <td>570.75</td>
+            <td>618.75</td>
+          </tr>
+          <tr>
+            <td>23 (1)</td>
+            <td>224.25</td>
+            <td>260.25</td>
+            <td>297.75</td>
+            <td>336.75</td>
+            <td>377.25</td>
+            <td>419.25</td>
+            <td>462.75</td>
+            <td>507.75</td>
+            <td>554.25</td>
+            <td>602.25</td>
+            <td>651.75</td>
+          </tr>
+          <tr>
+            <td>24 (1)</td>
+            <td>243.00</td>
+            <td>280.50</td>
+            <td>319.50</td>
+            <td>360.00</td>
+            <td>402.00</td>
+            <td>445.50</td>
+            <td>490.50</td>
+            <td>537.00</td>
+            <td>585.00</td>
+            <td>634.50</td>
+            <td>685.50</td>
+          </tr>
+          <tr>
+            <td>25 (1)</td>
+            <td>262.50</td>
+            <td>301.50</td>
+            <td>342.00</td>
+            <td>384.00</td>
+            <td>427.50</td>
+            <td>472.50</td>
+            <td>519.00</td>
+            <td>567.00</td>
+            <td>616.50</td>
+            <td>667.50</td>
+            <td>720.00</td>
+          </tr>
+        </table>
       </div>
       <div id="footer" class="box footer"></div>
     </div>
