started working on a synthesis seal page

--- a/html/system/trap.html
+++ b/html/system/trap.html
@@ -2338,7 +2338,7 @@
           N = Number of traps that successfully trapped an enemy due to a Chain Trap activating.<br>
           m = Number of Chain Traps (max: 1)
         </p>
-        <table id="trap_experience_table">
+        <table id="table_trap_experience">
           <tr>
             <th>N(m)\n</th>
             <th>0</th>
