fix typo, working on the seals page

--- a/html/dungeon/hidden_hole_b.html
+++ b/html/dungeon/hidden_hole_b.html
@@ -2745,7 +2745,7 @@
                 <td>Talking Seed</td>
                 <td>☆</td>
                 <td></td>
-                <td>Posession Staff</td>
+                <td>Possession Staff</td>
                 <td>☆</td>
                 <td></td>
               </tr>
