--- a/html/dungeon/onigashima.html
+++ b/html/dungeon/onigashima.html
@@ -1290,7 +1290,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td>Posession Staff</td>
+                <td>Possession Staff</td>
                 <td>☆</td>
                 <td>☆</td>
                 <td>☆</td>
@@ -2160,7 +2160,7 @@
           </p>
           <p>
             One search method besides reading a Wall Collapse Scroll would be to level up a Boy Cart,<br>
-            swing a Posession Staff to take control of them, and then use their special attack to blow up walls.
+            swing a Possession Staff to take control of them, and then use their special attack to blow up walls.
           </p>
           <p>
             Ivory Sword and Ivory Shield are ingredients used in making Daisangen equipment, and<br>
@@ -2201,7 +2201,7 @@
             </tr>
             <tr>
               <td>Staff</td>
-              <td>Swap Staff, Balance Staff, Slow Staff, Knockback Staff,<br>Miss Staff, Posession Staff, Grass Gain Staff, Grass Toss Staff</td>
+              <td>Swap Staff, Balance Staff, Slow Staff, Knockback Staff,<br>Miss Staff, Possession Staff, Grass Gain Staff, Grass Toss Staff</td>
             </tr>
             <tr>
               <td>Gitan</td>
@@ -2229,7 +2229,7 @@
             <dd>Useful to have on hand to escape dangerous situations.<br>Your attacks will never miss when hitting sleeping enemies.</dd>
             <dt>Blank Scroll</dt>
             <dd>Shop-exclusive item that can be transformed into any scroll you've read before.<br>Blank:Extinction can be thrown at Boss Oni to instantly defeat him.</dd>
-            <dt>Posession Staff</dt>
+            <dt>Possession Staff</dt>
             <dd>Offers many functions, including leveling up enemies,<br>tripping monsters for items by taking control of Armordillos, and escaping bad situations.</dd>
             <dt>Storage Pot</dt>
             <dd>Throw it at Boss Oni with 4500 or more Gitan inside to defeat him in a single hit.</dd>
@@ -2238,7 +2238,7 @@
           </dl>
           <h3 id="no_items_1_3">01~03F</h3>
           <p>
-            Snacky doesn't appear in Onigashima, so it's difficult to make a Cave Mamel to for early level ups.<br>That said, you can still make one by using Happy Grass or Posession Staff.<br>You'll have a hard time after these floors if you don't level up or find decent equipment.
+            Snacky doesn't appear in Onigashima, so it's difficult to make a Cave Mamel to for early level ups.<br>That said, you can still make one by using Happy Grass or Possession Staff.<br>You'll have a hard time after these floors if you don't level up or find decent equipment.
           </p>
           <p>
             Identify staves by swinging them, and pots by inserting items.<br>If you find a Storage Pot, start placing Gitan into it for the final boss battle.<br>Only use scrolls if you happen to obtain two of the same one. Identify Scrolls are common enough.<br>There are only 6 types of bracelets that can be found on the ground here, so you can narrow it down easily.<br>All grass items will already be identified. Save Otogiriso for synthesis if possible.
@@ -2248,7 +2248,7 @@
             Dangerous monsters include <a href="/shiren2/html/system/monster.html#small_oni_family">Small Oni</a> and <a href="/shiren2/html/system/monster.html#armordillo_family">Armordillo Bro</a>, along with <a href="/shiren2/html/system/monster.html#spearfish_family">Spearfish</a> family monsters from 5F.
           </p>
           <p>There are many waterways in Onigashima, so you risk losing items if you fight Armordillos near water.<br>Spearfish monsters can prolong the fight by restoring HP inside water when their HP gets low.</p>
-          <p>If you were lucky enough to find a Posession Staff, you can take<br>control of an Armordillo and gather items by making other monsters trip.</p>
+          <p>If you were lucky enough to find a Possession Staff, you can take<br>control of an Armordillo and gather items by making other monsters trip.</p>
           <p>If you weren't able to make a Cave Mamel earlier, you could try to gain more levels<br>by using the knockback damage from Armordillo Bro's tackle to level it up into an Armordillo Pop.</p>
           <h3 id="no_items_7_12">07~12F</h3>
           <p>
