--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -220,7 +220,7 @@
             <li>Extinction Scroll (Shop)</li>
             <li>Wall Collapse Scroll</li>
             <li>Monster Pot</li>
-            <li>Posession Staff</li>
+            <li>Possession Staff</li>
             <li>Strength Grass, Boost Grass, Grass Gain Staff, Grass Toss Staff</li>
             <li>Revival Grass</li>
           </ul>
@@ -230,7 +230,7 @@
           <p>Wall Collapse Scroll is mainly used to search for Golden Stairs leading to Golden Intervals.<br>The items you find inside Golden Intervals can be of great help on your descent to 99F.<br>The first Golden Interval between 6~10F is usually skipped, due to food shortages.<br>The second one can be found between 24~29F, and the last one between 90~95F.<br>Keep 6 Wall Collapse Scrolls on hand for the third one if you're looking for a Mijinha.</p>
           <p>Monster Pots can be used to capture an Armordillo Pop, which can be used to obtain a ridiculous amount of items.<br>If you find one early in the dungeon, level up an Armordillo Bro (5~6F) using an item like Happy Staff to capture a Pop.<br>If you don't have a way to level up an Armordillo Bro, you could go ahead and capture the Bro instead.<br>However, you'll need to be extra careful with how you handle it to keep it alive.<br>Watch out for things like Nigiri Morph's special attack and Trip Stones so that you don't lose the Monster Pot.</p>
           <p>If you find a Monster Pot after 6F, you could wait until Armordillo Pop can be found naturally between 30~39F,<br>or capture a different monster like Shihan, Monsoon Doll, Hyper Gazer, Gazelle Pope, Water Shinryu,<br>Stun Scorpion, Emperor Tusker, or Tiny Phoenix. Shihan is likely the second choice, as it can hold its own<br>in fights thanks to its high stats, and can be used to obtain Scout Bracelets and other equipment.</p>
-          <p>Posession Staff can be used to level monsters (have the target monster defeat the monster you're controlling)<br>and obtain items (take control of Armordillo or Kengo family monsters), among other uses.<br>This is often your go-to item to collect items between 5~6F where Armordillos appear.<br>This staff doesn't cost much (6 uses = 650G), so be sure to buy it if you see it in a shop.</p>
+          <p>Possession Staff can be used to level monsters (have the target monster defeat the monster you're controlling)<br>and obtain items (take control of Armordillo or Kengo family monsters), among other uses.<br>This is often your go-to item to collect items between 5~6F where Armordillos appear.<br>This staff doesn't cost much (6 uses = 650G), so be sure to buy it if you see it in a shop.</p>
           <p>Strength Grass, Boost Grass, and either Grass Gain Staff or Grass Toss Staff<br>can be used in combination to quickly increase Shiren's strength.<br>Strength plays a key role in damage calculation in Shiren 2, so it's important to increase it when possible.<br>Dealing more damage means you'll restore more HP per attack from Healing Sword (回 seal) as well.</p>
           <p>Shiren 2 doesn't have pots or scrolls that can restore HP, so it's important<br>to make use of Otogiriso and Revival Grass in ways that aren't wasteful.</p>
           <h3 id="weapon">Weapon</h3>
@@ -610,7 +610,7 @@
             <dd>Reduces a monster's HP to 1/4 of its current amount.<br>Great when fighting monsters with lots of HP, or when you lack offensive power.</dd>
             <dt>Slow Staff</dt>
             <dd>Allows you to defeat enemies without taking damage by looping attack → step back → attack.<br>Be careful against enemies with ranged attacks, or encountering an enemy in the opposite direction.</dd>
-            <dt>Posession Staff</dt>
+            <dt>Possession Staff</dt>
             <dd>Among the best staves in the game once you master how to use it.<br>Can be used to level up enemies, guard Shiren while he regenerates HP,<br>collect items by taking control of Armordillo or Kengo family monsters,<br>remove curses from items by taking control of a Straw Voodoll family monster,<br>gather wooden or iron arrows by taking control of a Bow Boy or Bow Cart,<br>obtain riceballs by taking control of a Nigiri Manager, or use it to walk while ignoring traps, etc.</dd>
             <dt>Seal Staff</dt>
             <dd>Prevents a monster from being able to use their special attack.<br>Nice to have when facing Kengo family monsters, Monsoon Doll, Nigiri Manager, Tiger Chucker, etc.</dd>
@@ -678,7 +678,7 @@
             <dt>Presto Pot</dt>
             <dd>Insert unneeded items or single arrows to transform them into different items.<br>The probability is low, but it's possible to obtain items like Scout Bracelet or Echo Shield from a Presto Pot.<br>The Presto Pot item table is narrowed down inside Golden Intervals.</dd>
             <dt>Monster Pot</dt>
-            <dd>Armordillo Pop lets you obtain an item from every monster you encounter.<br>Mixergon is another good option that allows you to synthesize all you want.<br>You can make Mixergon trip by using a Trip Statue, Posession Staff on an Armordillo,<br>Trip Stone and either Dragon Tile Bracelet or rolling a Cannonball with a Pierce Bracelet equipped, etc.</dd>
+            <dd>Armordillo Pop lets you obtain an item from every monster you encounter.<br>Mixergon is another good option that allows you to synthesize all you want.<br>You can make Mixergon trip by using a Trip Statue, Possession Staff on an Armordillo,<br>Trip Stone and either Dragon Tile Bracelet or rolling a Cannonball with a Pierce Bracelet equipped, etc.</dd>
             <dt>Upgrade Pot</dt>
             <dd>Incredibly rare item that can only be found in shops between 71~90F.<br>Stock up on Restock and Blank scrolls using an Armordillo Pop if you want to try to obtain one,<br>but it's common to go through 20 Restock Scrolls and still not see it, so you'll likely need to make multiple trips.</dd>
           </dl>
@@ -1498,7 +1498,7 @@
           <p>Limit the amount of time you spend in hallways on 8F to reduce the risk of Gazer (6~8F) or Scorpion (8F)<br>surprising you with their special attack, which either forces you to use an item, or lowers your strength.<br>Scorpion and Capt. Spearfish only appear on 8F, so you could rush to the stairs if you don't want to deal with them.</p>
           <p>There's a 25% chance for Golden Stairs to be generated inside a wall between 6~10F, so this floor range<br>is a good time to read unidentified scrolls, in case one of them happens to be a Wall Collapse Scroll.<br>However, you'll return to 11F after exiting the first Golden Interval, so if you go too early, you'll miss out on<br>being able to use Nigiri Morphs to make riceballs, along with 2 floors worth of Mixer spawns.<br>Food cannot be found inside the Golden Interval, so there is some risk of collapsing from starvation too.</p>
           <h4 id="floor_5_8_armordillo_items">Obtaining Items w/Armordillo Pop</h4>
-          <p>If you have a Posession Staff or Monster Pot, you can level up an Armordillo Bro into an Armordillo Pop<br>between 5~6F to collect items by making enemies trip using their special attack.<br>It's very rare to find a Monster Pot this early, but if you do find one, be sure to capture an Armordillo Pop here,<br>because the ability to generate additional items on every floor greatly increases the chance of clearing the dungeon.<br>Posession Staves are much more common than Monster Pots, and will still let you collect items for 2 floors.</p>
+          <p>If you have a Possession Staff or Monster Pot, you can level up an Armordillo Bro into an Armordillo Pop<br>between 5~6F to collect items by making enemies trip using their special attack.<br>It's very rare to find a Monster Pot this early, but if you do find one, be sure to capture an Armordillo Pop here,<br>because the ability to generate additional items on every floor greatly increases the chance of clearing the dungeon.<br>Possession Staves are much more common than Monster Pots, and will still let you collect items for 2 floors.</p>
           <pre class="dungeon_diagram">
 
     S:Shiren  A:Armordillo Bro
@@ -1506,12 +1506,12 @@
     ASA  Shiren will fly at an Armordillo Bro when tackled,
     □□□  causing one of them to defeat the other and level up.
 
-    If you have a Posession Staff, simply have an Armordillo Bro defeat a posessed monster.
+    If you have a Possession Staff, simply have an Armordillo Bro defeat a posessed monster.
           </pre>
           <h4 id="floor_5_8_arrows">Obtaining Iron Arrows</h4>
           <p>Make use of Boy Carts between 7~9F to collect Iron Arrows.</p>
           <dl>
-            <dt>Posession Staff</dt>
+            <dt>Possession Staff</dt>
             <dd>Take control of a Boy Cart and use their special attack while facing a wall.</dd>
             <dt>Wall Collapse Scroll</dt>
             <dd>Leave a gap of at least 10 tiles between Shiren and a Boy Cart, and collect the arrows that fall to the ground.<br>Can be difficult if your shield is weak, but you can use items like Knockback or Swap Staff to quickly gain distance.<br>If all goes well, you can expect to collect around 70 arrows per floor.</dd>
@@ -1562,9 +1562,9 @@
           <h4 id="floor_9_12_other">Other Tips</h4>
           <p>Wooden Arrow Traps and Iron Arrow Traps only appear between 5~10F. Use them to collect arrows while you can.</p>
           <p>Try reading a Wall Collapse Scroll on 9F after you explore the map and defeat some monsters.<br>You might find a Golden Stairs, and you can also collect Iron Arrows from a Boy Cart (7~9F).<br>Eat Sight Grass to remove the risk of stepping on a Pitfall on the way to the Golden Stairs.<br>Prepare Large Riceballs using a Nigiri Morph before entering the Golden Interval to avoid collapsing from hunger.</p>
-          <p>Mr. Helico makes an appearance on 10F and occasionally drops Happy Grass when defeated.<br>Don't eat the Happy Grass right away if you obtain one, but instead, throw it at another Mr. Helico<br>to level it up into a Mr. Gyro, which has a chance to drop Revival Grass when defeated.<br>Don't forget to assign a name to the unidentified Happy Grass or Revival Grass if you manage to obtain them.<br>If you have a Posession Staff, Happy Grass can also be used to level up Kengo, allowing you to obtain more equipment.</p>
+          <p>Mr. Helico makes an appearance on 10F and occasionally drops Happy Grass when defeated.<br>Don't eat the Happy Grass right away if you obtain one, but instead, throw it at another Mr. Helico<br>to level it up into a Mr. Gyro, which has a chance to drop Revival Grass when defeated.<br>Don't forget to assign a name to the unidentified Happy Grass or Revival Grass if you manage to obtain them.<br>If you have a Possession Staff, Happy Grass can also be used to level up Kengo, allowing you to obtain more equipment.</p>
           <p>Taishodon appears between 10~12F. If you have a Grass Toss Staff, go ahead and insert Strength Grass<br>or Happy Grass and swing it at a Taishodon to have it reflect the magic bolt back at Shiren.<br>Don't forget to eat a Boost Grass beforehand, if you happen to have one on hand.</p>
-          <p>Kengo (11~12F) can be troublesome as an emeny, but they're an excellent monster that can be used to collect<br>shields if you have a Posession Staff or Monster Pot. However, you'll likely want to level Kengo up into an Iai first<br>so that you can also collect weapons, along with having higher stats so they won't be defeated as easily.<br>You could also go for Shihan instead of Iai in hopes of obtaining a Scout Bracelet.</p>
+          <p>Kengo (11~12F) can be troublesome as an emeny, but they're an excellent monster that can be used to collect<br>shields if you have a Possession Staff or Monster Pot. However, you'll likely want to level Kengo up into an Iai first<br>so that you can also collect weapons, along with having higher stats so they won't be defeated as easily.<br>You could also go for Shihan instead of Iai in hopes of obtaining a Scout Bracelet.</p>
           <h3 id="floor_13_15">13~15F</h3>
           <p>Monsters include Wolf Droid (13~15F), Pop Tank (13~15F), Water Strider (13~15F), and Bored Kappa (14~19F).<br>Bombs and items can fly at you from outside of view when you're in a room, so never let your guard down.<br>Don't let a monster defeat another one with explosion damage, resulting in Gorilla Bot, Bear Borg, or Cranky Tank.</p>
           <p>Hurry through the floor to pick up items before Bored Kappas and Water Striders have a chance to pick them all up.<br>Seal Staff can prevent Water Striders from throwing their items, and Swap Staff is effective against Bored Kappas.<br>If you don't have any staves, items like Decoy and Slumber scrolls can be used to save items.</p>
@@ -1633,7 +1633,7 @@
           <h4 id="floor_30_39_preparing">Preparing for the Second Half</h4>
           <p>Monster attack strength is generally calmer here compared to 22~29F, and Mixermon continues to appear,<br>so take some time to collect items, synthesize equipment, and gain experience points.<br>You can likely get by fine with the minimum of 回 (Healing Sword) and 三 (Razor Wind) seals,<br>so it's a good idea to linger on floors until the wind blows if you have the means to keep hunger at bay.</p>
           <p>That said, the monster table between 31~39F swaps a previous monster out for a new one on each floor,<br>so monsters will gradually get stronger the further you progress on this floor range. (<a href="#monsters">Monsters</a> section for details).<br>Nashaaga (35~43F) may not be as strong as Lashaaga which were inside the second Golden Interval,<br>but they're still among the top threats on this floor range with their high stats and ability to attack twice.<br>If you let your guard down thinking Archdragon is the only real threat, you might find yourself losing strength<br>from slug licks, or losing 1-on-1 fights against the stronger enemies in the second half of this floor range.</p>
-          <p>Monster Pots are more common between 30~59F. (about x8 chance compared to other floors).<br>If you find one, be sure to capture an Armordillo Pop so that you can collect additional items.<br>Also remember that you can use a Posession Staff on an Armordillo Pop to collect items too.<br>Just be careful of Gyairas (30~49F), which can pluck pots and reduce the size by 1,<br>effectively ruining a Monster Pot if the ally monster was outside of it.</p>
+          <p>Monster Pots are more common between 30~59F. (about x8 chance compared to other floors).<br>If you find one, be sure to capture an Armordillo Pop so that you can collect additional items.<br>Also remember that you can use a Possession Staff on an Armordillo Pop to collect items too.<br>Just be careful of Gyairas (30~49F), which can pluck pots and reduce the size by 1,<br>effectively ruining a Monster Pot if the ally monster was outside of it.</p>
           <p>Shopkeepers level up to Asst. Managers starting on 30F.<br>Asst. Managers reflect magic, so keep that in mind if you plan on using staves to steal from shops.<br>You can use this to your advantage by swinging a Grass Toss Staff at an Asst. Manager to increase your strength.</p>
           <h3 id="floor_40_49">40~49F</h3>
           <p>Monsters include Intolerable Slug (39~47F), Iai (43~55F), and Nigiri Manager (45~57F).</p>
@@ -4910,7 +4910,7 @@
                 <td>☆</td>
                 <td>☆</td>
                 <td>☆</td>
-                <td>Posession Staff</td>
+                <td>Possession Staff</td>
                 <td>☆</td>
                 <td>☆</td>
                 <td>☆</td>
@@ -6099,7 +6099,7 @@
           <h3>First (6~10F, Return 11F)</h3>
           <p>It's rare to find Wall Collapse Scrolls this early in the dungeon, so you're unlikely to visit this Golden Interval.<br>That said, if you do get lucky, be sure to explore the entire map on each floor to collect all items.</p>
           <p>The monster table changes from 3F and includes numerous monsters with ranged attacks.<br>Snacky can also appear, often causing a Horse Ronin or Pop Tank to level up into a Horse Samurai or Cranky Tank.<br>Store Gitan inside of a Storage Pot, and use the Gitan as a projectile to deal with leveled up monsters.<br>You could try to intentionally level one of those monsters up as well, to increase the amount of experience you gain.</p>
-          <p>Dragon Killer and Dragon Shield can only be found in Golden Intervals, and are both powerful pieces of equipment.<br>Dragon Killer surpasses Dotanuki with its 15 base attack and 7 slots, and should be used as a main weapon.<br>Ryujin Sword can be synthesized using 4 Dragon Killers as well, and is the strongest main weapon in this dungeon.<br>If you have a Posession Staff, you can create an Iai on 3~4F and use its special attack to obtain more Dragon Killers.</p>
+          <p>Dragon Killer and Dragon Shield can only be found in Golden Intervals, and are both powerful pieces of equipment.<br>Dragon Killer surpasses Dotanuki with its 15 base attack and 7 slots, and should be used as a main weapon.<br>Ryujin Sword can be synthesized using 4 Dragon Killers as well, and is the strongest main weapon in this dungeon.<br>If you have a Possession Staff, you can create an Iai on 3~4F and use its special attack to obtain more Dragon Killers.</p>
           <p>However, note that you'll skip past important floors if you enter this Golden Interval too early:</p>
           <ul>
             <li><span class="dungeon_desc_warning">8~9F - Have Nigiri Morph make Large Riceballs for you.</span></li>
