--- a/html/dungeon/sealed_room.html
+++ b/html/dungeon/sealed_room.html
@@ -240,7 +240,7 @@
           <p>Patient Bag makes an appearance from 1~10F.<br>It has 120 HP and high attack for a 1F monster, and can explode when its remaining HP drops below 11.<br>Bracelets have a greater chance to crack from explosions, so be sure to unequip them before fighting these monsters.<br>They offer 200 experience when defeated, so try to finish them off without having them explode if possible.</p>
           <p>Kengo appears from 2~4F, and can fling your equipped shield away, so don't let your guard down.<br>Keep a Scout Bracelet equipped so you don't get hit by a surprise attack.<br>You could also unequip your shield when facing them if you leveled up on 1F as recommended.<br>Asuka will catch your shield if she is behind you as well.</p>
           <p>Water Strider appears from 5~7F.<br>Gitan is often found on the ground in Sealed Room, so Water Striders can potentially one-shot you by throwing Gitan.<br>You can use items like arrows and staves to defeat or otherwise prevent them from throwing Gitan from a distance.</p>
-          <p>Golden Stairs have a 30% chance to spawn inside the walls on 6~10F, so<br>go ahead and read Wall Collapse Scrolls if searching for the first Golden Interval.<br>It takes more time, but you could also level a Pop Tank up and then take control of the<br>Cranky Tank using a Posession Staff to break walls with cannonballs.</p>
+          <p>Golden Stairs have a 30% chance to spawn inside the walls on 6~10F, so<br>go ahead and read Wall Collapse Scrolls if searching for the first Golden Interval.<br>It takes more time, but you could also level a Pop Tank up and then take control of the<br>Cranky Tank using a Possession Staff to break walls with cannonballs.</p>
           <p>Iai appears from 13~17F. It's a tough monster to defeat quickly at<br>such an early point in the dungeon, so think of it as a level and equipment check.</p>
           <p>Bored Kappa appears from 14~17F, so watch out for the combo of Iai<br>flinging your sword or shield, followed by Bored Kappa walking to it up and throwing it at you.<br>Use items like Slumber Scroll or Swap Staff if a Bored Kappa moves on top of your equipment.</p>
           <p>You'll also want to be careful of Gazelle Pope (13~15F) if you don't have an<br>Echo Shield (山 seal), and Gyandora (16~30F) if you don't have a Walrus Shield (ト seal).<br>Note that you can always defeat them in a single hit if you have a Kaburasutegi+99 with the 必 seal.</p>
@@ -2882,7 +2882,7 @@
                 <td>☆</td>
                 <td></td>
                 <td></td>
-                <td>Posession Staff</td>
+                <td>Possession Staff</td>
                 <td></td>
                 <td>☆</td>
                 <td></td>
