--- a/html/item/price_chart.html
+++ b/html/item/price_chart.html
@@ -443,7 +443,7 @@
                   <td rowspan="2">337</td>
                 </tr>
                 <tr>
-                  <td><a href="/shiren2/html/item/staff.html#posession_staff">Posession Staff</a></td>
+                  <td><a href="/shiren2/html/item/staff.html#possession_staff">Possession Staff</a></td>
                 </tr>
                 <tr>
                   <td><a href="/shiren2/html/item/staff.html#swap_staff">Swap Staff</a></td>
