--- a/html/system/trap.html
+++ b/html/system/trap.html
@@ -212,6 +212,7 @@
           </tr>
         </table>
         <h2 class="page_heading">Trap Damage</h2>
+        <p>Trap damage scales with Shiren's level when he has the Trapper status.</p>
         <p>Key: Level, Droplet, Wooden Arrow, Burr, Iron Arrow, Rockfall, Rockslide, Trip Stone, Poison Arrow, Pitfall, Log.</p>
         <table class="table_trap_damage">
           <tr>
