--- a/html/dungeon/hidden_hole.html
+++ b/html/dungeon/hidden_hole.html
@@ -186,7 +186,7 @@
               <td class="stat_highlight_1">150</td>
               <td>95</td>
               <td>55</td>
-              <td class="recommended_monster_notes">Only breathes fire at targets in the same room as an ally.<br>Using a Posession Staff will let you breathe fire at any enemy on the current floor,<br>so it can be used to wipe out all monsters at the start and make it safer to explore.</td>
+              <td class="recommended_monster_notes">Only breathes fire at targets in the same room as an ally.<br>Using a Possession Staff will let you breathe fire at any enemy on the current floor,<br>so it can be used to wipe out all monsters at the start and make it safer to explore.</td>
             </tr>
             <tr>
               <td class="recommended_monster">Nigiri Manager</td>
@@ -338,7 +338,7 @@
               <td>146</td>
               <td>73</td>
               <td>52</td>
-              <td class="recommended_monster_notes">Required for synthesizing equipment. The items it swallowed will vanish<br>when it returns to its pot, so you'll need to make Mixergon trip before calling it back.<br>Easiest methods would be to swing a Balance Staff at it, or take control of<br>an Armordillo using a Posession Staff and use their special attack.</td>
+              <td class="recommended_monster_notes">Required for synthesizing equipment. The items it swallowed will vanish<br>when it returns to its pot, so you'll need to make Mixergon trip before calling it back.<br>Easiest methods would be to swing a Balance Staff at it, or take control of<br>an Armordillo using a Possession Staff and use their special attack.</td>
             </tr>
             <tr>
               <td>Snacky</td>
@@ -405,14 +405,14 @@
               <td class="recommended_monster_notes">Strongest ally monster in the game, thanks to its high growth limit. Its ability to spawn<br>3 ally Armor Spiders isn't great, but makes up for it with its ridiculously high stats.</td>
             </tr>
           </table>
-          <p>Many of these monsters are easier to find in other dungeons such as Shuten trails, Onigashima, and Sealed Room.<br>Enter this dungeon and read the Escape Scroll to obtain Monster Pots that can be used elsewhere.<br>There are many ways to make a monster level up, including throwing Happy Grass (Grass Toss Staff), use a<br>Posession Staff and have them defeat the posessed monster, feed the monster a Snacky (or Riku), and so on.</p>
+          <p>Many of these monsters are easier to find in other dungeons such as Shuten trails, Onigashima, and Sealed Room.<br>Enter this dungeon and read the Escape Scroll to obtain Monster Pots that can be used elsewhere.<br>There are many ways to make a monster level up, including throwing Happy Grass (Grass Toss Staff), use a<br>Possession Staff and have them defeat the posessed monster, feed the monster a Snacky (or Riku), and so on.</p>
           <p>Monsters to search for in Shrine's Hidden Hole would be ones like Queen Spider, Taurus, Tiny Phoenix, and N'dubba.<br>You might encounter a Special Monster House in this dungeon, which is a nice opportunity to capture high level monsters.</p>
           <h3 id="shield">Other Items</h3>
           <p>Shiren's offensive capabilities are limited, so it's easy to collapse if you start the floor in the middle of a Monster House.<br>There's also a chance you <strong>won't be able to send out ally monsters or summon shadows with a Decoy Scroll<br>if the number of characters is at the current floor's limit</strong> due to a Monster House being present.<br>So it's good to keep items like Swift Grass, Warp Grass, Swap Staff, and Sanctuary Scroll on hand at all times.</p>
           <h2 id="floor_guide">Floor Guide</h2>
           <h3 id="waterfall_basin">01~10F</h3>
           <p>Feed a Snacky to a Pit Mamel to make a Cave Mamel, and then have Shiren defeat it to get him up to level 8~9.<br>Use ally monsters like Monarch Tuskery to slow it down / weaken it first, and then have Shiren get the last hit in.<br>It would also be good to increase your max fullness to 200% by having Nigiri Manager defeat monsters.</p>
-          <p>After doing the above, <strong>use Armordillo Pop to gather items like Posession Staff, Otogiriso, and Revival Grass.</strong><br>Once you have a some of those items, <strong>use Iai to gather Clubs and Leather Shields with positive upgrade values.</strong><br>After that, go ahead and <strong>start synthesizing the Clubs and Leather Shields using Mixergon to strengthen them.</strong><br>However, don't forget to fill the Leather Shield's synthesis slots with 弟 (Otogiriso) before combining other Leather Shields.<br>Then you'll want to collect more Otogiriso to increase Shiren's max HP. Aim for 400 or higher if you want to be safe.</p>
+          <p>After doing the above, <strong>use Armordillo Pop to gather items like Possession Staff, Otogiriso, and Revival Grass.</strong><br>Once you have a some of those items, <strong>use Iai to gather Clubs and Leather Shields with positive upgrade values.</strong><br>After that, go ahead and <strong>start synthesizing the Clubs and Leather Shields using Mixergon to strengthen them.</strong><br>However, don't forget to fill the Leather Shield's synthesis slots with 弟 (Otogiriso) before combining other Leather Shields.<br>Then you'll want to collect more Otogiriso to increase Shiren's max HP. Aim for 400 or higher if you want to be safe.</p>
           <p>Antidote Grass cannot be found in this dungeon, so avoid getting your strength lowered by Slugs (3~5F) and Scorpions (8F).<br>That said, you can restore it by intentionally collapsing and using a Revival Grass, or by leveling down a<br>Bellthoven (51~60F) into a Schubell to have it summon Mr. Drones for Strength Grass drops.<br>You can also get by without Shiren doing the fighting thanks to ally monsters, so it's not the end of the world if it gets lowered.</p>
           <p>Be careful not to lose your monster pots due to getting tripped by Armordillo and Armordillo Bro (5~6F).<br>It's best to carry a Balance Staff in your inventory at all times to help prevent such accidents.<br>You can level Shiren up by standing between two Armordillo Bros to have one defeat the other with knockback damage,<br>and then have Shiren defeat the Armordillo Pop to gain 700 experience points per monster.</p>
           <p>Watch out for Zaloklefts (5~8F), as they might steal one of your Monster Pots and go underwater.<br>Use Monsoon Doll to seal them, or Hyper Gazer to confuse them before they get a chance to steal.<br>That said, you shouldn't have much trouble, since they're always sleeping inside rooms when they spawn.</p>
@@ -424,13 +424,13 @@
           <h3 id="hoof_rock_wall">22~60F</h3>
           <p>Shiren's equipment, level, and max HP should be pretty solid at this point if everything has gone well.<br>You can resupply items with Armordillo Pop as needed instead of relying on items on the ground, so<br>if feel you have enough Revival Grass and other items, start rushing to the stairs on each floor now.</p>
           <p>However, if you haven't been able to prepare as planned, you'll want to take things a little slower.<br>Monsters will only get stronger as you descend deeper into the dungeon, but you can use that to your advantage.<br>Capture monsters and send them out right away, <strong>using them to distact enemy monsters while you head for the stairs.</strong><br>You can also <strong>have them lead the way in hallways with Shiren following behind them</strong> to use them as a disposable shield.<br>Doing so will protect your important monsters from surprise attacks by Gazers, Nigiri Morphs, and Gyandoras.</p>
-          <p>Archdragon (30~59F) makes an appearance.<br>You shouldn't have too much to worry about if you have a shield with 5 弟 (Otogiriso) seals, and have<br>increased your max HP as recommended. If you're still worried, Tiny Phoenix can be used as a healer.<br>If you're aiming for 99F, be sure to <span class="dungeon_desc_warning">capture an Archdragon to help ensure you're able to pick up the Escape Scroll on 99F.</span><br>Also make sure you have a Posession Staff on hand, and if you want to be safe, capture a second Archdragon as backup.</p>
+          <p>Archdragon (30~59F) makes an appearance.<br>You shouldn't have too much to worry about if you have a shield with 5 弟 (Otogiriso) seals, and have<br>increased your max HP as recommended. If you're still worried, Tiny Phoenix can be used as a healer.<br>If you're aiming for 99F, be sure to <span class="dungeon_desc_warning">capture an Archdragon to help ensure you're able to pick up the Escape Scroll on 99F.</span><br>Also make sure you have a Possession Staff on hand, and if you want to be safe, capture a second Archdragon as backup.</p>
           <p>Other troublesome monsters include Nigiri Morph and Nigiri Manager (30~36F, 45~57F, 60~75F),<br>Gazer, Super Gazer, and Hyper Gazer (25~31F, 39~47F, 60~90F), Rancor Slug and Intolerable Slug (32~40F, 39~47F).<br>It's best to act with the assumption that you'll encounter one of them when walking through hallways.</p>
           <p>Gyandora (50~79F) also makes an appearance.<br>If it plucks a Monster Pot, the pot's <strong>size will be reduced from 1 to 0, instantly one-shotting whatever monster was inside.</strong><br>Again, have an ally monster lead the way in hallways with Shiren following behind them to avoid surprise attacks.</p>
           <p>Iron Zalokleft (51~53F) can steal your shield as well as Monster Pots, so don't let them use their special attack.</p>
           <h3 id="dark_night_cavern">60F~</h3>
           <p>Queen Spider (60~99F) makes an appearance.<br>This is the only dungeon where she can be captured, so be sure to do so if you still need one for Monster Kingdom.<br>If your goal was just to capture her instead of descending to 99F, go ahead and read an Escape Scroll after doing so.<br>However, if you threw away your Escape Scroll to prevent Gazer from making Shiren read it, you'll need to descend to 99F.<br><span class="dungeon_desc_warning">If a Vexing Kappa throws the scroll at you, or you fall in a Pitfall on 99F, you won't be able to escape from the dungeon alive.</span></p>
-          <p>Eat Sight Grass or perform empty attacks to check for traps one step at a time inside rooms.<br>Immediately read a Decoy Scroll if you see both red and blue dots on the map in the starting room.<br>Send out an Archdragon and take control of it using a Posession Staff to wipe out all monsters on the floor,<br>and then search for the scroll while using Archdragon to wipe out more monsters every now and then to be safe.<br>Lastly, Archdragons in Shiren 2 aren't very strong compared to other games, so be careful of monsters like Typhoon.</p>
+          <p>Eat Sight Grass or perform empty attacks to check for traps one step at a time inside rooms.<br>Immediately read a Decoy Scroll if you see both red and blue dots on the map in the starting room.<br>Send out an Archdragon and take control of it using a Possession Staff to wipe out all monsters on the floor,<br>and then search for the scroll while using Archdragon to wipe out more monsters every now and then to be safe.<br>Lastly, Archdragons in Shiren 2 aren't very strong compared to other games, so be careful of monsters like Typhoon.</p>
           <h2 id="monsters">Monsters</h2>
           <div class="hidden_hole_monster_table">
             <table>
@@ -3000,7 +3000,7 @@
                 <td>Talking Seed</td>
                 <td>☆</td>
                 <td></td>
-                <td>Posession Staff</td>
+                <td>Possession Staff</td>
                 <td>☆</td>
                 <td></td>
               </tr>
