--- a/html/index.html
+++ b/html/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Shiren 2 Wiki</title>
+    <link rel="icon" href="/shiren2/favicon.ico">
     <meta charset="utf-8">
     <script
         src="https://code.jquery.com/jquery-3.4.1.min.js"
